--- a/package.json
+++ b/package.json
@@ -2,16 +2,11 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "express": "^4.21.1",
-    "mongoose": "^8.8.0",
-    "nodemon": "^3.1.7"
-  }
+  "license": "ISC"
 }
